SERVER-26425 perform dropDatabase in WriteConflictException retry loop